--- a/env.example
+++ b/env.example
@@ -1,5 +1,5 @@
 # Database Configuration
-DATABASE_URL="postgresql://username:password@localhost:5432/optimalemd_db?schema=public"
+DATABASE_URL="postgresql://username:password@localhost:5432/optimaleMD_db?schema=public"
 
 # JWT Configuration
 JWT_SECRET="your-super-secret-jwt-key-here-make-it-long-and-random"
