--- a/app.yaml
+++ b/app.yaml
@@ -1,3 +1,6 @@
+# Google Cloud Platform Configuration
+service: default
+
 runtime: custom
 env: flex
 
@@ -5,7 +8,7 @@ instance_class: F1
 
 automatic_scaling:
   min_num_instances: 1
-  max_num_instances: 10
+  max_num_instances: 3
   cool_down_period_sec: 120
   cpu_utilization:
     target_utilization: 0.65
