--- a/.github/workflows/main_optimalemd.yml
+++ b/.github/workflows/main_optimalemd.yml
@@ -25,8 +25,8 @@ jobs:
 
       - name: npm install, build, and test
         run: |
-          npm install
-          npm run build --if-present
+          npm ci
+          npm run build
           npm run test --if-present
 
       - name: Upload artifact for deployment job
