--- a/.github/workflows/main_optimalemd.yml
+++ b/.github/workflows/main_optimalemd.yml
@@ -41,6 +41,17 @@ jobs:
             exit 1
           fi
 
+          echo "=== verify dist exists ==="
+          if [ ! -f dist/main.js ]; then
+            echo "ERROR: dist/main.js not found. Ensure your build output includes dist/main.js"
+            echo "Contents of dist:"
+            ls -la dist || true
+            exit 1
+          fi
+
+          echo "=== show package.json scripts (sanity) ==="
+          cat package.json | jq -r '.scripts'
+
           echo "=== create node_modules tar (App Service extracts this at startup) ==="
           tar -czf node_modules.tar.gz node_modules
 
@@ -56,7 +67,14 @@ jobs:
           echo "=== create package.zip ==="
           (cd deploy_package && zip -r ../package.zip .)
 
+          echo "=== list package.zip contents (for debug) ==="
+          unzip -l package.zip || true
+
       - name: Upload deployment package artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: node-app
+          path: package.zip
         uses: actions/upload-artifact@v4
         with:
           name: node-app
