--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-socket.io": "^11.1.6",
     "@nestjs/swagger": "^11.2.0",
+    "@nestjs/websockets": "^11.1.6",
     "@prisma/client": "^6.14.0",
     "@types/stripe": "^8.0.416",
     "bcrypt": "^5.1.1",
@@ -43,6 +45,7 @@
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.8.1",
     "stripe": "^18.4.0"
   },
   "devDependencies": {
