--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/websockets": "^11.1.6",
     "@prisma/client": "^6.14.0",
+    "@types/pdfkit": "^0.17.3",
     "@types/stripe": "^8.0.416",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
@@ -43,6 +44,7 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "pdfkit": "^0.17.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "socket.io": "^4.8.1",
