--- a/.github/workflows/main_optimaleproduction.yml
+++ b/.github/workflows/main_optimaleproduction.yml
@@ -19,13 +19,19 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Set up Node.js version
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: '20.x'
+          cache: 'npm'
 
-      - name: npm install, build, and test
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Verify required dependencies
+        run: node -e "require('@nestjs/websockets'); require('socket.io'); console.log('deps ok')"
+
+      - name: Build and test
         run: |
-          npm install
           npm run build --if-present
           npm run test --if-present
 
