--- a/.gitignore
+++ b/.gitignore
@@ -55,6 +55,6 @@ pids
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
-# Generated PDF reports
+# Generated PDF reports (but not src/reports source code)
 /reports
-reports/
+*.pdf
