--- a/.github/workflows/main_optimaleproduction.yml
+++ b/.github/workflows/main_optimaleproduction.yml
@@ -1,7 +1,4 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
-name: Build and deploy Node.js app to Azure Web App - optimaleproduction
+name: Build and Deploy Node.js app to Azure Web App - optimalemd
 
 on:
   push:
@@ -12,75 +9,75 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read #This is required for actions/checkout
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Node.js version
-        uses: actions/setup-node@v4
+      - name: Setup Node.js version
+        uses: actions/setup-node@v3
         with:
-          node-version: '20.x'
-          cache: 'npm'
+          node-version: '18.x'
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
-      - name: Verify required dependencies
-        run: node -e "require('@nestjs/websockets'); require('socket.io'); console.log('deps ok')"
+      - name: Build app
+        run: npm run build --if-present
 
-      - name: Generate Prisma Client
+      - name: Run Prisma generate
         run: npx prisma generate
 
-      - name: Verify Prisma Client generation
-        run: ls -la node_modules/@prisma/client/ && ls -la node_modules/.prisma/ || echo "Prisma client location check"
-
-      - name: Build and test
-        run: |
-          npm run build --if-present
-          npm run test --if-present
-
-      - name: Prepare deployment package
-        run: |
-          echo "Creating deployment package..."
-          mkdir -p deploy
-          cp -r dist deploy/
-          cp -r node_modules deploy/
-          cp package*.json deploy/
-          cp prisma deploy/ -r
-          ls -la deploy/
-
-      - name: Upload artifact for deployment job
+      - name: Upload artifact for deployment
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: deploy/
+          path: |
+            .
+            !node_modules/
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
+      id-token: write
+      contents: read
 
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: node-app
-      
+
+      - name: Install dependencies (for Prisma)
+        run: npm install --production
+
+      - name: Run Prisma generate
+        run: npx prisma generate
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_AC8CAFE5540F4219A78EB9794174B5F9 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_5E5431D0876D4A8392FA8278B9B323A5 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_84972767FF404269B732C89451184FE0 }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_129A1D0672A546CAAB3B61D73745770C }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_AA2855DFF4484260AB39F7440ABB5F06 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_57A70D711A884D1BBFC55640AD876E9E }}
 
-      - name: 'Deploy to Azure Web App'
+      - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'optimaleproduction'
           slot-name: 'Production'
           package: .
+
+      - name: Set post-deployment startup command
+        uses: azure/appservice-settings@v1
+        with:
+          app-name: 'optimaleproduction'
+          slot-name: 'Production'
+          app-settings-json: |
+            [
+              {
+                "name": "POST_DEPLOYMENT_COMMAND",
+                "value": "npx prisma generate"
+              }
+            ]
