--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@prisma/client": "^6.14.0",
     "@types/pdfkit": "^0.17.3",
     "@types/stripe": "^8.0.416",
+    "axios": "^1.13.2",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
