--- a/web.config
+++ b/web.config
@@ -2,12 +2,12 @@
 <configuration>
   <system.webServer>
     <handlers>
-      <add name="iisnode" path="dist/main.js" verb="*" modules="iisnode" />
+      <add name="iisnode" path="dist/src/main.js" verb="*" modules="iisnode" />
     </handlers>
     <rewrite>
       <rules>
         <rule name="NodeInspector" patternSyntax="ECMAScript" stopProcessing="true">
-          <match url="^dist/main.js\/debug[\/]?" />
+          <match url="^dist/src/main.js\/debug[\/]?" />
         </rule>
         <rule name="StaticContent">
           <action type="Rewrite" url="public{REQUEST_URI}" />
@@ -16,7 +16,7 @@
           <conditions>
             <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="True" />
           </conditions>
-          <action type="Rewrite" url="dist/main.js" />
+          <action type="Rewrite" url="dist/src/main.js" />
         </rule>
       </rules>
     </rewrite>
